Added WXADDITIONS Environment variable usage. Fixed the __WXDEBUG preprocessor define to __WXDEBUG__. Added wxUSE_UNICODE. Fixed the default program icon not showing in Windows explorer.

--- a/wxVC/files/vcWizard/vc7/VCWizards/AppWiz/wxWidgets/Templates/1033/root.rc
+++ b/wxVC/files/vcWizard/vc7/VCWizards/AppWiz/wxWidgets/Templates/1033/root.rc
@@ -14,7 +14,7 @@
 //aaaaaaaa ICON "main.ico"
 
 // this icon is used with wxFrame::SetIcon()
-main ICON "res\\[!output PROJECT_NAME].ico"
+amain ICON "res\\[!output PROJECT_NAME].ico"
 
 // set this to 1 if you don't want to use manifest resource (manifest resource
 // is needed to enable visual styles on Windows XP - see docs/msw/winxp.txt
