--- a/wxVC/files/h2/H2Reg_cmd.ini
+++ b/wxVC/files/h2/H2Reg_cmd.ini
@@ -2,39 +2,45 @@
 
 [Reg_Namespace]
 ;<nsName>|<nsColfile>|<nsDesc>
-wxWidgets.262|wxMaster.HxC|wxWidgets 2.6.2
+wxWidgets.284|wx.HxC|
 
 [Reg_Title]
 ;<nsName>|<TitleID>|<LangId>|<HxS_HelpFile>|<HxI_IndexFile>|<HxQ_QueryFile>|<HxR_AttrQueryFile>|<HxsMediaLoc>|<HxqMediaLoc>|<HxrMediaLoc>|<SampleMediaLoc>
-wxWidgets.262|wx|1033|wx.HxS|wx.HxS||||||
+wxWidgets.284|wxWidgets.284|1033|wx.HxS|wx.HxS||||||
 
 [Reg_Plugin]
 ;<nsName_Parent>|<HxT_Parent>|<nsName_Child>|<HxT_Child>|<HxA_Child>
-MS.VSCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
-MS.VSIPCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
-MS.VSExpressCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
-
+MS.VSCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
+MS.VSIPCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
+MS.VSExpressCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
 
 [Reg_Filter]
 ;<nsName>|<FilterName>|<FilterQueryStr>
-wxWidgets.262|wxWidgets|("DocSet"="wxWindows")
+wxWidgets.284|wxWidgets.284|("DocSet"="wxwidgets.284")
 
 ;------- UnRegister -u switch
 
 [UnReg_Namespace]
 ;<nsName>
-wxWidgets.262
+wxWidgets.284
 
 [UnReg_Title]
 ;<nsName>|<TitleID>|<LangId>
-wxWidgets.262|wx|1033
+wxWidgets.284|wxWidgets.284|1033
 
 [UnReg_Plugin]
 ;<nsName_Parent>|<HxT_Parent>|<nsName_Child>|<HxT_Child>|<HxA_Child>
-MS.VSCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
-MS.VSIPCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
-MS.VSExpressCC+|_DEFAULT|wxWidgets.262|_DEFAULT|
+MS.VSCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
+MS.VSIPCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
+MS.VSExpressCC+|_DEFAULT|wxWidgets.284|_DEFAULT|
 
 [UnReg_Filter]
 ;<nsName>|<FilterName>
-wxWidgets.262|wxWidgets
+wxWidgets.284|wxWidgets.284
+
+;------- Merge -m switch
+
+[Merge_Namespace]
+;<nsName>|<option>
+wxWidgets.284
+
